# manualimageprocess

./: CMakeLists.txt  Convolution.cpp  Convolution.h  DecodeMessage.cpp  DecodeMessage.h  EdgeDetector.cpp  EdgeDetector.h  EncodeMessage.cpp  EncodeMessage.h  ImageLoader.cpp  ImageMatrix.cpp  ImageMatrix.h  ImageProcessor.cpp  ImageProcessor.h  ImageSharpening.cpp  ImageSharpening.h  README.md  main.cpp
